@@ -179,7 +179,6 @@ How to build & install libvte compatible library using mlterm engine.
 
     - class property
       "allow-bold"
-      "audible-bell"
       "background-image-file"
       "background-image-pixbuf"
       "background-opacity"
@@ -192,11 +191,9 @@ How to build & install libvte compatible library using mlterm engine.
       "delete-binding"
       "emulation"
       "encoding"
-      "font-desc"
       "pointer-autohide"
       "pty"
       "scroll-background"
-      "scrollback-lines"
       "scroll-on-keystroke"
       "scroll-on-output"
       "word-chars"
